@@ -1,3 +1,8 @@
+2008-06-25  Gabriel Burt  <gabriel.burt@gmail.com>
+
+	* src/Libraries/Hyena/Hyena.Query/Tests/QueryTests.cs: Make the query
+	tests that used to pass pass again.
+
 2008-06-25  Aaron Bockover  <abock@gnome.org>
 
 	This commit fixes two new errors exposed due to fixes in gmcs trunk
